name:
  "coq-dynarray"
synopsis:
  "Verification of OCaml Dynarray"
opam-version:
  "2.0"
maintainer:
  "clement.allain@inria.fr"
authors: [
  "Clément Allain"
  "Gabriel Scherer"
]
homepage:
  "https://github.com/clef-men/dynarray"
bug-reports:
  "https://github.com/clef-men/dynarray/issues"
depends: [
  "coq" {= "8.15.2"}
  "coq-stdpp" {= "dev.2023-06-01.0.d1254759"}
  "coq-iris" {= "dev.2023-06-30.0.7e865892"}
  "coq-iris-heap-lang" {= "dev.2023-06-30.0.7e865892"}
  "coq-diaframe" {= "dev.2023-06-15.0.1c3b5549"}
  "coq-diaframe-heap-lang" {= "dev.2023-06-15.0.1c3b5549"}
]
build: [
  make "-j%{jobs}%"
]
